# curses

./: CMakeLists.txt  Test  config.c  config.h  config.xml  main.c  main.h  types.h
lib/: pdcurses.lib
win/: iconv.h
